@@ -16,8 +16,6 @@ java {
     }
 }
 
-tasks.withType<JavaCompile>().configureEach { options.compilerArgs.add("--enable-preview") }
-
 dependencies {
     implementation("org.apache.spark:spark-core_2.12:3.3.2")
     implementation("org.apache.spark:spark-sql_2.12:3.3.2")
@@ -37,26 +35,13 @@ publishing {
 
             from(components["java"])
         }
-        /*create<IvyPublication>("ivy") {
-            organisation = "com.netapp.spark"
-            module = "codesubmit"
-            revision = "1.0"
-
-            from(components["java"])
-        }*/
     }
     repositories {
         maven {
             url = uri(layout.projectDirectory.dir("repo"))
-            //val homeDir = System.getProperty("user.home")
-            //url = uri("$homeDir/.ivy2/cache")
         }
     }
 }
-
-/*tasks.compileJava {
-    options.release.set(11)
-}*/
 
 tasks.test {
     jvmArgs = listOf(
